
==CHANGES RELEASED 17 AUG 2016==

	- When setting up schedules, you can now clone the schedule of another
	  event altogether.  Only works in events/categories with no schedule at
	  all. 

	- Added a feature which will mandate that schools enter refund information;
	  a payable to field and an address will be requested if the setting
	  "Request Refund Info" is checked under "Settings -> Tournament -> Settings";
	  (Glenbrooks request)

	- Added some complicated skullduggery that should make event double entry
	  patterns more flexible; you can now mutually exclude multiple patterns
	  from each other, and exclude a pattern from ONE or the OTHER of another
	  pattern; so a contestant in Debate A Flight can either either Speech A or
	  Speech B, but not both.  (Pi Kappa Delta request)

	- Worlds Schools support is significantly enhanced with better ballot
	  printouts, online ballots are now supported, and subcategory scores are
	  saved from online ballots, and be emailed out to tournament contacts
	  automatically. 

	  In related news, Tabroom ran the Worlds Schools tournament this year.  It
	  was pretty neat!  And it almost killed me.  But I'm learning...

	- The Settings -> Event -> tabbing tab was growing out of control,
	  especially in debate events.  I have split it now into two, Tabbing will
	  govern things like results and entry, and Sectioning (IE), Pairing
	  (Debate) or Chambers (Congress) will govern things like creating rounds
	  and making schedules. 

	- There are much more flexible options on how to set up your IE master
	  ballots under Settings -> Judges -> Tabbing.   There are similarly more
	  flexible options on how to make your IE schematics look under 
	  Settings -> Event -> Sectioning. 

	- Added a feature where people signing up for accounts for the first time
	  can instead log in with their NSDA points username and password.  An
	  account will be created for them on Tabroom with those credentials