@@ -89,8 +89,7 @@
 		my %entries_in_event;
 		my %event_by_id = map {$_->id => $_} $category->events;
 
-		my $bump_after = $category->setting("committment_bump_after");
-
+		my $bump_after = $category->setting("commitment_bump_after");
 		foreach my $entry (@entries) {
 			$entries_in_event{$entry->event}++;
 		}
@@ -98,16 +97,15 @@
 		foreach my $event_id (keys %entries_in_event) { 
 
 			#add a rd of commitment if too many entries in event
-
 			if ( $bump_after && $entries_in_event{$event_id} > $bump_after) {
-				$judge_burden +=
-					$entries_in_event{$event_id} * $category->setting("commitment_bump_unit");
+				$judge_burden += ( ($entries_in_event{$event_id}-$bump_after) * $category->setting("commitment_bump_unit") );
 			}
 
 			#adjust for event
 			if ($event_by_id{$event_id}->setting("commitment_adj") != 0 ) {
-				$judge_burden += $event_by_id{$event_id}->setting("commitment_adj");
+				$judge_burden += ( $event_by_id{$event_id}->setting("commitment_adj") * $entries_in_event{$event_id} );
 			}
+			
 		}
 				
 		$judge_burden = $judge_burden - $category->setting("free") if @entries;
