@@ -140,7 +140,7 @@
 				</a>
 %			}
 
-%			my @postings = sort {$b->id <=> $a->id} Tab::File->search(tourn => $tourn_id, posting => 1);
+%			my @postings = sort {$b->id <=> $a->id} Tab::File->search(tourn => $tourn_id, type => "posting");
 
 %			if (@postings) {
 				<h4>Other Postings</h4>
