@@ -219,7 +219,10 @@
 
 						<td class="centeralign nospace smallish">
 %							unless ($admin_perms{$admin->id}{"owner"} &! ($admin_perms{$person->id}{"owner"} || $person->site_admin)) { 
-								<a class="dkred marno button" href="access_rm.mhtml?admin_id=<% $admin->id %>">Remove</a>
+								<a 
+									class="redtext button buttonwhite fa fa-lg fa-trash" 
+									href="access_rm.mhtml?admin_id=<% $admin->id %>"
+								></a>
 %							}
 						</td>
 
