@@ -20,6 +20,10 @@
 				</th>
 
 				<th class="smaller">
+					Where Posted
+				</th>
+
+				<th class="smaller">
 				</th>
 
 			</tr>
@@ -28,19 +32,24 @@
 
     			<tr class="row">
 
-					<td class="smallish">
+					<td>
 						<a class="white full" href="<% $Tab::s3_url %>/<% $tourn->id %>/postings/<% $posting->id %>/<% $posting->filename %>">
 							<% $posting->label %>
 						</a>
 					</td>
 
-					<td class="smaller">
+					<td>
 						<% Tab::niceshortdt($posting->uploaded->set_time_zone($tourn->tz)) %>
 					</td>
 
-					<td class="smaller centeralign">
-						<a class="dkred" href="posting_rm.mhtml?posting_id=<% $posting->id %>">
-							Delete File
+					<td>
+						<% ucfirst($posting->type) %>
+					</td>
+
+					<td class="centeralign">
+						<a 
+							class="redtext button buttonwhite fa fa-trash fa-lg" 
+							href="posting_rm.mhtml?posting_id=<% $posting->id %>">
 						</a>
 					</td>
 
@@ -52,29 +61,82 @@
 
 		<h4>Add new:</h4>
 
+		<p class="explain">
+			Please note: tournament web pages are cached and only re-generate
+			every 10 minutes.  Changes may not appear immediately.
+		</p>
+
 		<form enctype="multipart/form-data" onsubmit="return uploadThis()" name="posting" action="posting_upload.mhtml" method="post">
 
-		<div class="evenrow">
+		<div class="row">
+
+			<span class="quarter">
+				Label
+			</span>
+			<span class="half">
+				<input 
+					type = "text"
+					size = "24"
+					name = "label"
+				>
+			</span>
+		</div>
+
+		<div class="row">
+
+			<span class="quarter">
+				Type/Location:
+			</span>
 
 			<span class="half">
-				<span class="quarter">
-					Label
-				</span>
-				<span class="threequarter">
-					<input type="text" size="25" name="label">
-				</span>
+				<select name="type" class="fixedsmall">
+					<option value="front">Front Page</option>
+					<option value="posting">Postings Page</option>
+					<option value="result">Results Page</option>
+				</select>
 			</span>
 
-			<div class="uploader">
-				<input type="file" name="posting" style="opacity: 0;" onchange="uploaderName()" id="upload">
-				<span id="filename" class="filename" style="-webkit-user-select: none;">No file selected</span> 
-				<span class="action" style="-webkit-user-select: none;">Choose File</span>
-			</div>
+		</div>
 
-			<span class="sixth rightalign">
-				<input type="submit" class="thin" value="  Save  ">
+		<div class="row">
+
+			<span class="quarter">
+				File:
 			</span>
 
+			<span class="half">
+				<div class="uploader">
+					<input 
+						type     = "file"
+						name     = "posting"
+						style    = "opacity: 0;"
+						onchange = "uploaderName()"
+						id       = "upload"
+					>
+					<span 
+						id    = "filename"
+						class = "filename"
+						style = "-webkit-user-select: none;"
+					>No file selected</span>
+
+					<span 
+						class = "action"
+						style = "-webkit-user-select: none;"
+					>Choose File</span>
+				</div>
+			</span>
+
+		</div>
+
+		<div class="full liblrow">
+
+			<span class="quarter">
+			</span>
+
+			<input 
+				type  = "submit"
+				class = "thin"
+				value = "Post File">
 		</div>
 
 		</form>
