@@ -16,7 +16,7 @@
 		my $file = Tab::File->create({
 			tourn     => $tourn->id,
 			uploaded  => $now,
-			result    => 1,
+			type      => "result",
 			published => $publish
 		});
 
