@@ -1,4 +1,9 @@
 
+
+	- Files uploads are a little more clear; when you post one under Setup ->
+	  Web you can choose where to post the file: the front/main page, the
+	  pairings page, or the results page. 
+
 ==CHANGES RELEASED 17 AUG 2016==
 
 	- When setting up schedules, you can now clone the schedule of another
